@@ -9,11 +9,12 @@ scalaVersion := "2.12.10"
 libraryDependencies += "org.scalatest" %% "scalatest" % "3.0.1" % "test"
 libraryDependencies += "org.apache.spark" %% "spark-sql" % "2.4.4" % "provided"
 libraryDependencies += "MrPowers" % "spark-fast-tests" % "0.20.0-s_2.12" % "test"
-libraryDependencies += "mrpowers" % "spark-daria" % "0.36.0-s_2.12"
+libraryDependencies += "mrpowers" % "spark-daria" % "0.37.1-s_2.12"
 
 // test suite settings
 fork in Test := true
 javaOptions ++= Seq("-Xms512M", "-Xmx2048M", "-XX:+CMSClassUnloadingEnabled")
+//javaOptions ++= Seq("-Xms512M", "-Xmx2048M", "-XX:MaxPermSize=2048M", "-XX:+CMSClassUnloadingEnabled")
 // Show runtime of tests
 testOptions in Test += Tests.Argument(TestFrameworks.ScalaTest, "-oD")
 envVars in Test := Map("PROJECT_ENV" -> "test")
